force-app/main/default/objects/Validation_Rule__mdt/Validation_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Validation Rule</label>
    <pluralLabel>Validation Rules</pluralLabel>
    <description>Defines data-driven validation rules evaluated by the ValidationRuleEngine. Each record specifies a field, operator, expected value, and optional dependency condition that must be met for the rule to fire.</description>
</CustomObject>