force-app/main/default/objects/Validation_Rule__mdt/fields/Dependent_Field__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Field__c</fullName>
    <label>Dependent Field</label>
    <description>Optional. API name of a prerequisite field that must match Dependent_Value__c for this rule to fire. Enables conditional rules like "when Regulatory_Status is Approved, then FDA_Approval_Date must not be blank."</description>
    <type>Text</type>
    <length>100</length>
</CustomField>