force-app/main/default/objects/Validation_Rule__mdt/fields/Dependent_Value__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Value__c</fullName>
    <label>Dependent Value</label>
    <description>The value that Dependent_Field__c must equal for this rule to apply. Only evaluated when Dependent_Field__c is populated.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>