force-app/main/default/objects/Validation_Rule__mdt/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Error Message</label>
    <description>User-facing error message displayed when this validation rule fails.</description>
    <type>Text</type>
    <length>500</length>
    <required>true</required>
</CustomField>