force-app/main/default/objects/Validation_Rule__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <label>Field Name</label>
    <description>API name of the field to evaluate on the target record (e.g., FDA_Approval_Date__c).</description>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
</CustomField>