force-app/main/default/objects/Validation_Rule__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <description>When checked, this rule is evaluated by the engine. Uncheck to deactivate without deleting.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>