force-app/main/default/objects/Validation_Rule__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <description>API name of the SObject this rule applies to (e.g., Drug_Product__c).</description>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
</CustomField>