force-app/main/default/objects/Validation_Rule__mdt/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <description>The comparison operator used to evaluate the field value.</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
            </value>
            <value>
                <fullName>not_equals</fullName>
            </value>
            <value>
                <fullName>is_blank</fullName>
            </value>
            <value>
                <fullName>is_not_blank</fullName>
            </value>
            <value>
                <fullName>greater_than</fullName>
            </value>
            <value>
                <fullName>less_than</fullName>
            </value>
            <value>
                <fullName>contains</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>