force-app/main/default/objects/Validation_Rule__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <description>The expected value to compare against. Leave blank for is_blank and is_not_blank operators.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>